--- a/assets/section-main-page.css
+++ b/assets/section-main-page.css
@@ -21,3 +21,7 @@
   width: 52.5rem;
   height: 52.5rem;
 }
+
+.banner-page-section {
+  background-color: #f8f4ec;
+}
